# OpenProteoCore

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml  publish.yml
src/: arrow.rs  conformance.rs  enums.rs  lib.rs  mzml.rs  types.rs
tests/: smoke.rs
