[package]
name = "openproteo-core"
description = "Shared types, traits, and mzML writer for open Rust mass-spec parsers."
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Nathan Riley <git@nathanriley.com>"]
license = "Apache-2.0"
repository = "https://github.com/Sigilweaver/OpenProteoCore"
homepage = "https://github.com/Sigilweaver/OpenProteoCore"
keywords = ["mass-spectrometry", "mzml", "proteomics", "metabolomics", "psi-ms"]
categories = ["science", "encoding"]
readme = "README.md"

[lints.rust]
unsafe_code = "forbid"

[features]
default = []
# Build a zero-copy Apache Arrow `RecordBatch` from a stream of
# `SpectrumRecord`s. Pulls in the `arrow-array` / `arrow-schema` crates.
arrow = ["dep:arrow-array", "dep:arrow-schema", "dep:arrow-buffer"]

[dependencies]
arrow-array = { version = "58", optional = true }
arrow-schema = { version = "58", optional = true }
arrow-buffer = { version = "58", optional = true }

[dev-dependencies]
