[package]
name = "openproteo-core"
description = "Shared types, traits, and mzML writer for open Rust mass-spec parsers."
version = "1.0.1"
edition = "2021"
rust-version = "1.85"
authors = ["Nathan Riley <git@nathanriley.com>"]
license = "Apache-2.0"
repository = "https://github.com/Sigilweaver/OpenProteoCore"
homepage = "https://sigilweaver.app/openproteo/docs/"
documentation = "https://docs.rs/openproteo-core"
keywords = ["mass-spectrometry", "mzml", "proteomics", "metabolomics", "psi-ms"]
categories = ["science", "encoding"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "forbid"

[features]
default = []
# Build a zero-copy Apache Arrow `RecordBatch` from a stream of
# `SpectrumRecord`s. Pulls in the `arrow-array` / `arrow-schema` crates.
arrow = ["dep:arrow-array", "dep:arrow-schema", "dep:arrow-buffer"]

[dependencies]
arrow-array = { version = "58", optional = true }
arrow-schema = { version = "58", optional = true }
arrow-buffer = { version = "58", optional = true }
thiserror = "2"

[dev-dependencies]
